# basketball-matchup-analyze

./: .env.example  .gitattributes  .gitignore  docker-compose.yml
services/ai-service/: config.py  config.yml  pyproject.toml
services/auth-service/: go.mod  go.sum  sqlc.yaml
services/auth-service/cmd/: main.go
services/auth-service/config/: config.go
services/auth-service/db/migrations/: 000001_create_users_table.down.sql  000001_create_users_table.up.sql
services/auth-service/db/queries/: user.sql
services/auth-service/internal/api/handlers/: auth.go  health.go
services/auth-service/internal/api/middleware/: jwt.go
services/auth-service/internal/api/router/: router.go
services/auth-service/internal/model/: user.go
services/auth-service/internal/repository/: models.go  user.sql.go
services/auth-service/pkg/utils/: errors.go  jwt.go  password.go  token.go
